@@ -53,8 +53,16 @@ static NSMutableDictionary	*_globalFontDictionary = nil;
 
 @implementation GSXftFontInfo
 
-- initWithFontName: (NSString*)name matrix: (const float *)fmatrix
+- initWithFontName: (NSString*)name
+	    matrix: (const float *)fmatrix
+	screenFont: (BOOL)screenFont
 {
+  if (screenFont)
+    {
+      RELEASE(self);
+      return nil;
+    }
+
   [super init];
   ASSIGN(fontName, name);
   memcpy(matrix, fmatrix, sizeof(matrix));
