@@ -1,3 +1,8 @@
+2003-01-26 21:24  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/xlib/GSXftFontInfo.m: Update with screen font changes in
+	backend/gui interface.
+
 2003-01-26 20:07  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/x11/XWindowBuffer.m (-_exposeRect:): Round rectangle to
